--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pyasn1==0.4.8; python_version >= "3.5" and python_version < "4"
 pydantic==1.8.2; python_full_version >= "3.6.1" and python_version >= "3.6"
 pypika-tortoise==0.1.1; python_version >= "3.7" and python_version < "4.0"
 python-jose==3.3.0
+python-multipart==0.0.5
 pytz==2021.3; python_version >= "3.7" and python_version < "4.0"
 rsa==4.7.2; python_version >= "3.5" and python_version < "4"
 six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
