--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ tortoise-orm = "0.17.7"
 uvicorn = "0.13.4"
 asyncpg = "0.24.0"
 python-multipart = "^0.0.5"
+bcrypt = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 
